Revision history for Dist-Mgr

1.04 UNREL
    - Change -x to -w in distmgr POD
    - Moved distmgr POD from binary to separate POD file
    - Add distmgr command process flow documentation to the README (closes #37)

1.03    2021-01-12
    - POD fixes and updates
    - In distmgr, add user interaction prior to cpan_upload() so the user can
      confirm for certain that the dist tarball should be uploaded
    - Renamed git_status() to git_status_differs() to be less confusing
    - We now skip over Git operations and CI testing if 'release' is called and
      nothing has changed (closes #38)
    - Added more output surrounding CPAN uploads
    - version_info() now sets a default directory if $fs_entry not sent in
    - distmgr release now has --wait and --nowait for CI test run completion
    - distmgr binary now has thorough and complete unit tests
    - distmgr release wasn't sending proper params to cpan_upload()

1.02    2021-01-06
    - This release was skipped for internal testing purposes

1.01    2021-01-06
    - This release fully performed with this Dist::Mgr software!! (Crosses
      fingers)
    - Added bin/distmgr script
    - ci_badges() was forcing $fs_entry param, but it should be optional; fixed
    - git_commit() now accepts $msg instead of $version as first param
    - All Git commands now print the exit code in the error message
    - Add build, dist and install commands to binary
    - Replace t/manifest.t with updated code to work properly with custom entries
    - Rework all tests that match dates... the changeover from 2020 to 2021
      exposed comparison issues
    - Prevent the addition of multiple repository and bugtracker sections from
      being added to Makefile.PL (fixes #23; fixes #24)
    - Prevent the addition of multiple CI badge links (fixes #22)
    - Each command in distmgr binary have separate help sections (closes #30)
    - all make* functions have verbose option to print all output (closes #35)