@@ -2,7 +2,9 @@ use warnings;
 use strict;
 use Test::More;
 
+use Capture::Tiny qw(:all);
 use Data::Dumper;
+use File::Touch;
 use Hook::Output::Tiny;
 use Dist::Mgr qw(:all);
 
@@ -66,5 +68,61 @@ my %args = (
     }
 }
 
+# with config file set
+{
+    my %args = (dry_run => 1);
+    write_config();
+    config(\%args);
+
+    remove(config_file());
+
+    my $dist = 't/data/work/dist-0.01.tar.gz';
+    touch $dist;
+    is -e $dist, 1, "$dist file created ok";
+
+    my $out = capture_merged {
+        cpan_upload($dist, %args);
+    };
+
+    like $out, qr/dry run mode/, "cpan_upload() in dry run mode ok with config file";
+    like $out, qr/Successfully uploaded/, "cpan_upload() succeeded ok with config file";
+
+    unlink $dist or die "Can't delete $dist: $!";
+    is -e $dist, undef, "$dist file removed ok";
+}
+
 done_testing();
 
+sub write_config {
+    my ($args) = @_;
+
+    my $file = config_file();
+
+    my $data = config(\%args);
+    $data->{cpan_id} = 'steveb';
+    $data->{cpan_pw} = 'testing';
+
+    # write new file and check for updated %args
+
+    put($file, $data);
+}
+sub put {
+    my ($conf_file, $data) = @_;
+    {
+        local $/;
+        open my $fh, '>', $conf_file or die "can't open $conf_file: $!";
+        my $jobj = JSON->new;
+
+        print $fh $jobj->pretty->encode($data);
+    }
+}
+sub remove {
+    my ($conf_file) = @_;
+
+    if (-e $conf_file) {
+        unlink $conf_file or die "Can't remove config file $conf_file: $!";
+        is -e $conf_file, undef, "Removed config file $conf_file ok";
+    }
+
+    is -e $conf_file, undef, "(unlink) config file $conf_file doesn't exist ok";
+}
